# Uni_HH_Projekt2016_Particle_Simulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  cleanup.sh  vectorisierung_resultate
Testing/: .gitignore
Testing/Resources/: 2_particles.csv  2_particles_periodic_boundary.csv  6_particles.csv  config1.xml  test_FileWriterCSV.test1.tmp.0.csv  test_FileWriterCSV.test2.tmp.0.csv
Testing/Slurm/: .gitignore  generator_mpi.sh  print_times.sh  print_times_dichte.sh  print_times_geschwindigkeit.sh  print_times_gleichverteilung.sh  print_times_gprof.sh  print_times_openmp_skalierung.sh  print_times_rebuild_vs_calculate.sh  sbatch_all.sh  slurm_generator.sh  slurm_generator_dichte.sh  slurm_generator_geschwindigkeit.sh  slurm_generator_gleichverteilung.sh  slurm_generator_gprof.sh  slurm_generator_grid_test.sh  slurm_generator_openmp_skalierung.sh  slurm_generator_rebuild_vs_calculate.sh  slurm_grid_test_64.sh  slurm_grid_test_64000.sh  slurm_grid_test_64000_1.sh  slurm_grid_test_64000_20.sh  slurm_gridlist_test_64000.sh  slurm_gridlist_test_64000_1.sh  slurm_gridlist_test_64000_20.sh  slurm_listbenjamin_test_64000.sh  slurm_listbenjamin_test_64000_1.sh  slurm_listbenjamin_test_64000_20.sh
organization/: .gitignore  LennardJonesAlgorithm.tex  ParticleGrid.tex  abschlussPraesentation_links.txt  changelog_2.11.2016_Heidmann.txt  issues.txt  nameing_conventions.txt  notes.txt  projektplan.txt  todo.txt
organization/1_Projektplan-latex/: main.tex
organization/2_Zwischenbesprechung-latex/: main.tex
organization/3_Abschlusspräsentation-latex/: main.tex  times_gleichverteilung.csv  times_openmp_skalierung_1.csv  times_openmp_skalierung_1_2.csv
organization/4_Abschlusspräsentation-latex/: main.tex
organization/5_Abschlussbericht-latex/: bericht.tex  times_openmp_skalierung_1.csv  times_openmp_skalierung_1_2.csv  times_rebuild.csv  times_rebuild.ods  times_rebuild_vs_calculate.csv
organization/Zwischenbesprechung_12_01_2017/: LennardJonesAlgorithm.tex
scripts/: paraview_csv_to_avi.py
src/: Debug.hpp  Definitions.hpp  DummyAlgorithm.hpp  LennardJonesAlgorithm.cpp  LennardJonesAlgorithm.hpp  Makefile  ParticleFileWriter.cpp  ParticleFileWriter.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  ParticleSimulator.cpp  ParticleSimulator.hpp  Particles.cpp  Particles.hpp  ParticlesBase.hpp  ParticlesGrid.cpp  ParticlesGrid.hpp  Usage.hpp  debug.hpp  definitions.hpp  main.cpp  particles.cpp  particles.hpp  sortScript.sh  vec3.hpp
src/IO/: Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  OptionHandler.cpp  OptionHandler.hpp  OptionsGenerator.hpp  OptionsSimulation.hpp  ParticleFileLoader.cpp  ParticleFileLoader.hpp  ParticleFileWriter.cpp  ParticleFileWriter.hpp
src/algorithms/: DummyAlgorithm.hpp  LennardJonesAlgorithm.cpp  LennardJonesAlgorithm.hpp  ParticleBoundsCorrection.hpp  ParticleBoundsCorrectionWraparound.cpp  ParticleBoundsCorrectionWraparound.hpp
src/datastructures/: ParticlesBase.cpp  ParticlesBase.hpp  ParticlesGrid.cpp  ParticlesGrid.hpp  ParticlesList.cpp  ParticlesList.hpp
src/generators/: ParticleGenerator.cpp  ParticleGenerator.hpp  ParticleGeneratorBase.cpp  ParticleGeneratorBase.hpp  ParticleGeneratorFactory.cpp  ParticleGeneratorFactory.hpp  ParticleGeneratorFactoryFactory.cpp  ParticleGeneratorFactoryFactory.hpp  ParticleGeneratorGridDistribution.cpp  ParticleGeneratorGridDistribution.hpp  ParticleGeneratorRandom.cpp  ParticleGeneratorRandom.hpp  ParticleGeneratorSingleObjectMiddle.cpp  ParticleGeneratorSingleObjectMiddle.hpp
src/main/: DataType.hpp  Definitions.hpp  EnergyConservation.cpp  EnergyConservation.hpp  ParticleSimulator.cpp  ParticleSimulator.hpp  Statistics.cpp  Statistics.hpp  Vec3.cpp  Vec3.hpp  main.cpp  vec3.hpp
src/main/IO/: Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  OptionHandler.cpp  OptionHandler.hpp  Options.hpp  OptionsSimulation.hpp  ParticleFileLoader.hpp  ParticleFileWriter.cpp  ParticleFileWriter.hpp  ParticleWriterBase.cpp  ParticleWriterBase.hpp  ParticleWriterCSV.cpp  ParticleWriterCSV.hpp
src/main/algorithms/: AlgoAlternativeVec.pp  AlgorithmBase.hpp  AlgorithmFactory.cpp  AlgorithmFactory.hpp  AlgorithmLennardJones.cpp  AlgorithmLennardJones.hpp  AlgorithmStoermerVerletLennardJones.cpp  AlgorithmStoermerVerletLennardJones.hpp  DummyAlgorithm.hpp  LennardJonesAlgorithm.cpp  LennardJonesAlgorithm.hpp  OlliAlogSVLJ  ParticleBoundsCorrection.hpp  ParticleBoundsCorrectionWraparound.cpp  ParticleBoundsCorrectionWraparound.hpp  test.cpp  test.s
src/main/autotuneing/: Autotuneing.hpp  DatastructureAnalyser.cpp  DatastructureAnalyser.hpp
src/main/autotuning/: Autotuning.hpp  DatastructureAnalyser.cpp  DatastructureAnalyser.hpp
src/main/borders/: BorderBase.hpp  BorderWrapparound.cpp  BorderWrapparound.hpp  ParticleBoundsCorrection.hpp  ParticleBoundsCorrectionWraparound.cpp  ParticleBoundsCorrectionWraparound.hpp
src/main/datastructures/: DatastructureBase.cpp  DatastructureBase.hpp  DatastructureFactory.cpp  DatastructureFactory.hpp  DatastructureGrid.cpp  DatastructureGrid.hpp  DatastructureLinkedCells.cpp  DatastructureLinkedCells.hpp  DatastructureLinkedCellsNeighborList.cpp  DatastructureLinkedCellsNeighborList.hpp  DatastructureList.cpp  DatastructureList.hpp  DatastructureListBenjamin.cpp  DatastructureListBenjamin.hpp  DatastructureListGrid.cpp  DatastructureListGrid.hpp  DatastructureNeighborList.cpp  DatastructureNeighborList.hpp  ParticlesBase.cpp  ParticlesBase.hpp  ParticlesGrid.cpp  ParticlesGrid.hpp  ParticlesList.cpp  ParticlesList.hpp
src/main/enums/: EnumAlgorithmType.cpp  EnumAlgorithmType.hpp  EnumCSVColumnType.cpp  EnumCSVColumnType.hpp  EnumDatastructureType.cpp  EnumDatastructureType.hpp  EnumInputType.cpp  EnumInputType.hpp  EnumOutputType.cpp  EnumOutputType.hpp
src/main/generators/: GeneratorBase.cpp  GeneratorBase.hpp  GeneratorFactory.cpp  GeneratorFactory.hpp  GeneratorGridDistribution.cpp  GeneratorMultipleObjects.cpp  GeneratorRandom.cpp  (+15 more)
src/test/: main.cpp  test_Vec3.cpp  test_vec3.cpp
src/tools/: Benchmark.cpp  Benchmark.hpp  Debug.hpp  Usage.hpp
(+114 files in other folders)
